--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -81,6 +81,7 @@ reference:
     - fmt_duration
     - fmt_markdown
     - fmt_passthrough
+    - fmt_auto
     - fmt
     - sub_missing
     - sub_zero
