--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(fmt_datetime)
 export(fmt_duration)
 export(fmt_engineering)
 export(fmt_fraction)
+export(fmt_index)
 export(fmt_integer)
 export(fmt_markdown)
 export(fmt_missing)
