--- a/NAMESPACE
+++ b/NAMESPACE
@@ -143,6 +143,7 @@ export(vec_fmt_datetime)
 export(vec_fmt_duration)
 export(vec_fmt_engineering)
 export(vec_fmt_fraction)
+export(vec_fmt_index)
 export(vec_fmt_integer)
 export(vec_fmt_markdown)
 export(vec_fmt_number)
