--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -290,6 +290,7 @@ reference:
     - vec_fmt_fraction
     - vec_fmt_currency
     - vec_fmt_roman
+    - vec_fmt_index
     - vec_fmt_bytes
     - vec_fmt_date
     - vec_fmt_time
