--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,6 +43,7 @@ Imports:
     ggplot2 (>= 3.3.5),
     glue (>= 1.6.1),
     htmltools (>= 0.5.2),
+    htmlwidgets (>= 1.6.1),
     juicyjuice (>= 0.1.0),
     magrittr (>= 2.0.2),
     reactable (>= 0.2.3),
