--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ export(fmt_passthrough)
 export(fmt_percent)
 export(fmt_roman)
 export(fmt_scientific)
+export(fmt_spelled_num)
 export(fmt_time)
 export(ggplot_image)
 export(google_font)
@@ -151,6 +152,7 @@ export(vec_fmt_partsper)
 export(vec_fmt_percent)
 export(vec_fmt_roman)
 export(vec_fmt_scientific)
+export(vec_fmt_spelled_num)
 export(vec_fmt_time)
 export(web_image)
 import(rlang)
