--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -43,6 +43,7 @@ tests/testthat/test-fmt_passthrough.R
 tests/testthat/test-fmt_percent.R
 tests/testthat/test-fmt_roman.R
 tests/testthat/test-fmt_scientific.R
+tests/testthat/test-fmt_spelled_num.R
 tests/testthat/test-footer.R
 tests/testthat/test-group_column_label.R
 tests/testthat/test-gtsave.R
