--- a/NAMESPACE
+++ b/NAMESPACE
@@ -96,6 +96,7 @@ export(opt_all_caps)
 export(opt_css)
 export(opt_footnote_marks)
 export(opt_horizontal_padding)
+export(opt_interactive)
 export(opt_row_striping)
 export(opt_stylize)
 export(opt_table_font)
