--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ export(fmt_roman)
 export(fmt_scientific)
 export(fmt_spelled_num)
 export(fmt_time)
+export(fmt_url)
 export(ggplot_image)
 export(google_font)
 export(grand_summary_rows)
