--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -82,6 +82,7 @@ reference:
     - fmt_datetime
     - fmt_duration
     - fmt_markdown
+    - fmt_url
     - fmt_passthrough
     - fmt_auto
     - fmt
