rx_addv table for vignette
Renamed former gt_ad* datasets to rx_ad*. Created new table for Protocol Deviations in clinical tables vignete.

--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -247,8 +247,8 @@ reference:
     - sp500
     - pizzaplace
     - exibble
-    - gt_adsl
-    - gt_addv
+    - rx_adsl
+    - rx_addv
     - towny
 
   - title: Shiny Functions
