--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ export(google_font)
 export(grand_summary_rows)
 export(gt)
 export(gt_latex_dependencies)
+export(gt_multi)
 export(gt_output)
 export(gt_preview)
 export(gtsave)
