--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,8 @@ export(info_time_style)
 export(local_image)
 export(matches)
 export(md)
+export(multi_extract_tbl)
+export(multi_options)
 export(num_range)
 export(one_of)
 export(opt_align_table_header)
