--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(as.data.frame,gt_tbl)
 S3method(print,gt_tbl)
 S3method(print,rtf_text)
 export("%>%")
+export(add_gt_tbls)
 export(adjust_luminance)
 export(as_latex)
 export(as_raw_html)
@@ -91,8 +92,6 @@ export(info_time_style)
 export(local_image)
 export(matches)
 export(md)
-export(multi_extract_tbl)
-export(multi_options)
 export(num_range)
 export(one_of)
 export(opt_align_table_header)
@@ -107,12 +106,15 @@ export(opt_table_font)
 export(opt_table_lines)
 export(opt_table_outline)
 export(opt_vertical_padding)
+export(opts_gt_tbls)
 export(pct)
+export(pull_gt_tbls)
 export(px)
 export(random_id)
 export(render_gt)
 export(rm_caption)
 export(rm_footnotes)
+export(rm_gt_tbls)
 export(rm_header)
 export(rm_source_notes)
 export(rm_spanners)
