--- a/NAMESPACE
+++ b/NAMESPACE
@@ -112,6 +112,7 @@ export(pull_gt_tbls)
 export(px)
 export(random_id)
 export(render_gt)
+export(replace_gt_tbls)
 export(rm_caption)
 export(rm_footnotes)
 export(rm_gt_tbls)
