--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -268,6 +268,7 @@ reference:
     - opts_gt_tbls
     - pull_gt_tbls
     - add_gt_tbls
+    - replace_gt_tbls
     - rm_gt_tbls
 
   - title: Vector Formatting Functions
