--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -262,7 +262,7 @@ reference:
     - extract_summary
     - extract_cells
 
-  - title: Managing Multiple Tables
+  - title: Multiple-table Functions
     contents:
     - gt_multi
     - opts_gt_tbls
@@ -297,7 +297,7 @@ reference:
 
   - title: Datasets
     desc: >
-      The **gt** package is equipped with eight datasets that come in all shapes
+      The **gt** package is equipped with nine datasets that come in all shapes
       and sizes. Use them to experiment with the package. Many examples in the
       internal help documents use these datasets to quickly demonstrate the key
       features of **gt**.
