--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ export(ggplot_image)
 export(google_font)
 export(grand_summary_rows)
 export(grp_add)
+export(grp_clone)
 export(grp_options)
 export(grp_pull)
 export(grp_replace)
