--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,6 @@ Imports:
     glue (>= 1.6.1),
     htmltools (>= 0.5.2),
     htmlwidgets (>= 1.6.1),
-    juicyjuice (>= 0.1.0),
     magrittr (>= 2.0.2),
     reactable (>= 0.2.3),
     rlang (>= 1.0.2),
@@ -54,18 +53,19 @@ Imports:
     tidyselect (>= 1.1.1)
 Suggests:
     covr,
-    digest (>= 0.6.29),
+    digest (>= 0.6.31),
+    juicyjuice (>= 0.1.0),
+    lubridate,
     knitr,
     paletteer,
-    testthat (>= 3.0.0),
     RColorBrewer,
-    lubridate,
-    rmarkdown,
+    rmarkdown (>= 2.20),
     rvest,
-    shiny,
+    shiny (>= 1.7.4),
+    testthat (>= 3.1.6),
     tidyr,
-    webshot2,
-    xml2
+    webshot2 (>= 0.1.0),
+    xml2 (>= 1.3.3)
 Roxygen: list(markdown = TRUE)
 Collate: 
     'as_data_frame.R'
