--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,6 +145,9 @@ export(tab_stubhead)
 export(tab_style)
 export(tab_style_body)
 export(test_image)
+export(text_case_match)
+export(text_case_when)
+export(text_replace)
 export(text_transform)
 export(vars)
 export(vec_fmt_bytes)
