--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -61,9 +61,7 @@ reference:
       argument. We get to apply these functions exactly once to each data
       cell (last call wins). Need to do custom formatting? Use the `fmt()`
       function and define your own formatter within (or, create a wrapper
-      with `fmt()` if you prefer). The `text_transform()` function allows
-      for post-processing of any data, and we provide a function for that
-      transformation.
+      with `fmt()` if you prefer).
     contents:
     - fmt_number
     - fmt_integer
