--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(fmt_datetime)
 export(fmt_duration)
 export(fmt_engineering)
 export(fmt_fraction)
+export(fmt_image)
 export(fmt_index)
 export(fmt_integer)
 export(fmt_markdown)
