--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(fmt_date)
 export(fmt_datetime)
 export(fmt_duration)
 export(fmt_engineering)
+export(fmt_flag)
 export(fmt_fraction)
 export(fmt_image)
 export(fmt_index)
