--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ Authors@R: c(
            comment = c(ORCID = "0000-0002-4191-6301")),    
     person("JooYoung", "Seo", , "jseo1005@illinois.edu", "aut",
            comment = c(ORCID = "0000-0002-4064-6012")),
-    person("Posit, PBC", role = c("cph", "fnd"))
+    person("Posit Software, PBC", role = c("cph", "fnd"))
     )
 License: MIT + file LICENSE
 URL: https://gt.rstudio.com/, https://github.com/rstudio/gt
