--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ export(gt_group)
 export(gt_latex_dependencies)
 export(gt_output)
 export(gt_preview)
+export(gt_splitter)
 export(gtsave)
 export(html)
 export(info_currencies)
