--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -101,6 +101,7 @@ Collate:
     'gt.R'
     'gt_group.R'
     'gt_preview.R'
+    'gt_splitter.R'
     'helpers.R'
     'image.R'
     'info_tables.R'
