--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(extract_cells)
 export(extract_summary)
 export(fmt)
 export(fmt_auto)
+export(fmt_bins)
 export(fmt_bytes)
 export(fmt_currency)
 export(fmt_date)
