--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,8 +55,9 @@ Suggests:
     covr,
     digest (>= 0.6.31),
     juicyjuice (>= 0.1.0),
-    lubridate,
     knitr,
+    lubridate,
+    markdown (>= 1.5),
     paletteer,
     RColorBrewer,
     rmarkdown (>= 2.20),
