--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,7 +90,7 @@ export(gt_group)
 export(gt_latex_dependencies)
 export(gt_output)
 export(gt_preview)
-export(gt_splitter)
+export(gt_split)
 export(gtsave)
 export(html)
 export(info_currencies)
