--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,7 +50,8 @@ Imports:
     sass (>= 0.4.5),
     scales (>= 1.2.1),
     tibble (>= 3.1.8),
-    tidyselect (>= 1.2.0)
+    tidyselect (>= 1.2.0),
+    xml2 (>= 1.3.3)
 Suggests:
     covr,
     digest (>= 0.6.31),
@@ -65,8 +66,7 @@ Suggests:
     shiny (>= 1.7.4),
     testthat (>= 3.1.6),
     tidyr,
-    webshot2 (>= 0.1.0),
-    xml2 (>= 1.3.3)
+    webshot2 (>= 0.1.0)
 Roxygen: list(markdown = TRUE)
 Collate: 
     'as_data_frame.R'
