--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,7 @@ export(opt_align_table_header)
 export(opt_all_caps)
 export(opt_css)
 export(opt_footnote_marks)
+export(opt_footnote_spec)
 export(opt_horizontal_padding)
 export(opt_interactive)
 export(opt_row_striping)
@@ -193,9 +194,11 @@ importFrom(xml2,xml_add_sibling)
 importFrom(xml2,xml_attr)
 importFrom(xml2,xml_child)
 importFrom(xml2,xml_children)
+importFrom(xml2,xml_contents)
 importFrom(xml2,xml_find_all)
 importFrom(xml2,xml_find_first)
 importFrom(xml2,xml_name)
 importFrom(xml2,xml_ns)
 importFrom(xml2,xml_remove)
 importFrom(xml2,xml_text)
+importFrom(xml2,xml_type)
