--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -220,6 +220,7 @@ reference:
     - opt_stylize
     - opt_interactive
     - opt_footnote_marks
+    - opt_footnote_spec
     - opt_row_striping
     - opt_align_table_header
     - opt_vertical_padding
