--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -283,7 +283,7 @@ reference:
       There are some advantages to having a group of tables bundled together in
       a `gt_group` object. You could apply options that pertain to all tables
       yet still access the individual tables to give them their own specialized
-      modifications. They all print together at once too! For HTML, each table
+      modifications. They all print altogether at once too! For HTML, each table
       will be separated by a line break whereas in paginated formats the tables
       are separated by page breaks.
     contents:
