--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,6 +136,7 @@ export(sub_small_vals)
 export(sub_values)
 export(sub_zero)
 export(summary_rows)
+export(system_fonts)
 export(tab_caption)
 export(tab_footnote)
 export(tab_header)
