--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,6 @@ Imports:
     commonmark (>= 1.8.1),
     dplyr (>= 1.1.0),
     fs (>= 1.6.1),
-    ggplot2 (>= 3.4.1),
     glue (>= 1.6.2),
     htmltools (>= 0.5.4),
     htmlwidgets (>= 1.6.1),
@@ -57,6 +56,7 @@ Imports:
 Suggests:
     covr,
     digest (>= 0.6.31),
+    ggplot2,
     knitr,
     lubridate,
     paletteer,
