--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -1,9 +1,9 @@
+url: https://gt.rstudio.com
+
 destination: docs
 
 home:
   strip_header: true
-
-url: https://gt.rstudio.com
 
 template:
   bootstrap: 5
@@ -14,10 +14,9 @@ authors:
 
 development:
   mode: auto
-  version_label: default
 
 reference:
-  - title: Create Table
+  - title: Creating a table
     desc: >
       All **gt** tables begin with a call to `gt()`, where we would supply the
       input data table (data frame or tibble) and some basic options for
@@ -30,7 +29,7 @@ reference:
     - gt
     - gt_preview
 
-  - title: Create or Modify Parts
+  - title: Creating or modifying parts of a table
     desc: >
       A **gt** table can contain a few useful parts for conveying additional
       information. These include a header (with a titles and subtitle), a
@@ -54,7 +53,7 @@ reference:
     - tab_options
     - tab_info
 
-  - title: Format Data
+  - title: Formatting data
     desc: >
       Columns of data can be formatted with the `fmt_*()` functions. We can
       specify the rows of these columns quite precisely with the `rows`
@@ -96,7 +95,7 @@ reference:
     - sub_values
     - data_color
 
-  - title: Text Transformation Functions
+  - title: Text transformation functions
     desc: >
       The `text_*()` functions take cell data that are solidified into
       strings and allow for flexible transformations of those string values.
@@ -110,7 +109,7 @@ reference:
     - text_case_match
     - text_transform
 
-  - title: Modify Columns
+  - title: Modifying columns
     desc: >
       The `cols_*()` functions allow for modifications that act on entire
       columns. This includes alignment of the data in columns
@@ -134,7 +133,7 @@ reference:
     - cols_merge_range
     - cols_merge_n_pct
 
-  - title: Add or Modify Rows
+  - title: Adding or modifying rows
     desc: >
       There are two functions that will add rows to a **gt** table:
       `summary_rows()` and `grand_summary_rows()`. These functions will both add
@@ -146,7 +145,7 @@ reference:
     - grand_summary_rows
     - row_group_order
 
-  - title: Remove Parts of a Table
+  - title: Removing parts of a table
     desc: >
       The `rm_*()` functions let us safely remove parts of a **gt** table. This
       can be advantageous in those instances where you would obtain a **gt**
@@ -159,7 +158,7 @@ reference:
     - rm_source_notes
     - rm_caption
 
-  - title: Helper Functions
+  - title: Helper functions
     desc: >
       An assortment of helper functions is available in the **gt** package.
       The various `cells_*()` functions are used for targeting cells with the
@@ -201,7 +200,7 @@ reference:
     - default_fonts
     - system_fonts
 
-  - title: Image Addition Functions
+  - title: Image addition functions
     desc: >
       We can add images into a **gt** table with the help of the `*_image()`
       functions. Two common ways to do this: (1) use `text_transform()` to
@@ -214,7 +213,7 @@ reference:
     - ggplot_image
     - test_image
 
-  - title: Table Option Functions
+  - title: Table option functions
     desc: >
       With the `opt_*()` functions, we have an easy way to set commonly-used
       table options without having to use `tab_options()` directly. Like, we can
@@ -237,7 +236,7 @@ reference:
     - opt_table_font
     - opt_css
 
-  - title: Information Functions
+  - title: Information functions
     desc: >
       These `info_*()` functions present us with **gt** tables containing
       useful information. So far, we can get reference information on
@@ -255,7 +254,7 @@ reference:
     - info_paletteer
     - info_google_fonts
 
-  - title: Shiny Functions
+  - title: Shiny functions
     desc: >
       Shiny is great for building interactive web apps with R. There's
       really nothing quite like it. The **gt** package includes two
@@ -266,7 +265,7 @@ reference:
     - render_gt
     - gt_output
 
-  - title: Export Functions
+  - title: Export and extraction functions
     desc: >
       There may come a day when you need to export a **gt** table to some
       specific format. A great function for that is `gtsave()`, which allows
@@ -285,7 +284,7 @@ reference:
     - extract_summary
     - extract_cells
 
-  - title: Table Group Functions
+  - title: Table group functions
     desc: >
       Sometimes you want to deal with a multitude of **gt** tables, all at once.
       There are some advantages to having a group of tables bundled together in
@@ -304,7 +303,7 @@ reference:
     - grp_rm
     - grp_options
 
-  - title: Vector Formatting Functions
+  - title: Vector formatting functions
     desc: >
       Why should columns have all the formatting fun? If you have vectors in
       need of formatting, we have a set of `vec_fmt_*()` functions that have
@@ -328,7 +327,7 @@ reference:
     - vec_fmt_duration
     - vec_fmt_markdown
 
-  - title: Datasets
+  - title: Built in datasets
     desc: >
       The **gt** package is equipped with ten datasets that come in all shapes
       and sizes. Use them to experiment with the package! Many examples in the
