--- a/NAMESPACE
+++ b/NAMESPACE
@@ -128,6 +128,7 @@ export(rm_source_notes)
 export(rm_spanners)
 export(rm_stubhead)
 export(row_group_order)
+export(rows_add)
 export(starts_with)
 export(stub)
 export(sub_large_vals)
