--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -144,6 +144,7 @@ reference:
     - summary_rows
     - grand_summary_rows
     - row_group_order
+    - rows_add
 
   - title: Removing parts of a table
     desc: >
