--- a/.github/workflows/build-site.yaml
+++ b/.github/workflows/build-site.yaml
@@ -15,6 +15,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r@v2
         with:
+          r-version: '4.2'
           use-public-rspm: true
 
       - uses: r-lib/actions/setup-pandoc@v2
