--- a/.github/workflows/build-site.yaml
+++ b/.github/workflows/build-site.yaml
@@ -13,12 +13,21 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - uses: r-lib/actions/setup-pandoc@v2
+
+      - name: Set up Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
+        with:
+          version: pre-release
+
+      - name: Print Quarto version
+        run: |
+          quarto --version
+
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: '4.2'
           use-public-rspm: true
-
-      - uses: r-lib/actions/setup-pandoc@v2
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
@@ -28,11 +37,11 @@ jobs:
       - name: Install package
         run: R CMD INSTALL .
 
-      - name: Build and deploy pkgdown site
+      - name: Generate Quarto files for website
         run: |
           Rscript -e 'gt:::write_gt_examples_qmd_files()'
 
-      - name: Render site
+      - name: Build Quarto site
         run: |
           quarto render gt_qmd_examples
 
