--- a/.github/workflows/build-site.yaml
+++ b/.github/workflows/build-site.yaml
@@ -40,6 +40,7 @@ jobs:
             ggplot2
             lubridate
             paletteer
+            janitor
             any::sessioninfo
           dependencies: '"hard"'
 
