--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -54,6 +54,7 @@ tests/testthat/test-fmt_url.R
 tests/testthat/test-footer.R
 tests/testthat/test-group_column_label.R
 tests/testthat/test-gt_group.R
+tests/testthat/test-gt_object.R
 tests/testthat/test-gt_split.R
 tests/testthat/test-gtsave.R
 tests/testthat/test-h_md_html.R
