--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -88,5 +88,6 @@ tests/testthat/test-text_transform.R
 tests/testthat/test-util_functions.R
 tests/testthat/test-utils_formatters.R
 tests/testthat/test-utils_render_html.R
+tests/testthat/test-utils_units.R
 tests/testthat/test-utils.R
 tests/testthat/test-vec_fmt.R
