--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -124,6 +124,7 @@ reference:
     - cols_width
     - cols_label
     - cols_label_with
+    - cols_units
     - cols_move
     - cols_move_to_start
     - cols_move_to_end
