--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(cols_move)
 export(cols_move_to_end)
 export(cols_move_to_start)
 export(cols_unhide)
+export(cols_units)
 export(cols_width)
 export(contains)
 export(css)
