--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(css)
 export(currency)
 export(data_color)
 export(default_fonts)
+export(define_units)
 export(ends_with)
 export(escape_latex)
 export(everything)
