--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ export(fmt_roman)
 export(fmt_scientific)
 export(fmt_spelled_num)
 export(fmt_time)
+export(fmt_units)
 export(fmt_url)
 export(ggplot_image)
 export(google_font)
