--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -83,6 +83,7 @@ reference:
     - fmt_duration
     - fmt_bins
     - fmt_markdown
+    - fmt_units
     - fmt_url
     - fmt_image
     - fmt_flag
@@ -333,10 +334,10 @@ reference:
 
   - title: Built in datasets
     desc: >
-      The **gt** package is equipped with ten datasets that come in all shapes
-      and sizes. Use them to experiment with the package! Many examples in the
-      internal help documents use these datasets to quickly demonstrate the
-      awesome features of **gt**.
+      The **gt** package is equipped with twelve datasets that come in all
+      shapes and sizes. Use them to experiment with the package! Many examples
+      in the internal help documents use these datasets to quickly demonstrate
+      the awesome features of **gt**.
     contents:
     - countrypops
     - sza
@@ -346,6 +347,8 @@ reference:
     - exibble
     - towny
     - metro
+    - constants
+    - illness
     - rx_adsl
     - rx_addv
 
