--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(cells_stub_summary)
 export(cells_stubhead)
 export(cells_summary)
 export(cells_title)
+export(cols_add)
 export(cols_align)
 export(cols_align_decimal)
 export(cols_hide)
