--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -126,6 +126,7 @@ reference:
     - cols_label
     - cols_label_with
     - cols_units
+    - cols_add
     - cols_move
     - cols_move_to_start
     - cols_move_to_end
