--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ export(fmt_spelled_num)
 export(fmt_time)
 export(fmt_units)
 export(fmt_url)
+export(from_column)
 export(ggplot_image)
 export(google_font)
 export(grand_summary_rows)
