--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(fmt_duration)
 export(fmt_engineering)
 export(fmt_flag)
 export(fmt_fraction)
+export(fmt_icon)
 export(fmt_image)
 export(fmt_index)
 export(fmt_integer)
