--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ export(html)
 export(info_currencies)
 export(info_date_style)
 export(info_google_fonts)
+export(info_icons)
 export(info_locales)
 export(info_paletteer)
 export(info_time_style)
