--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -260,6 +260,7 @@ reference:
     - info_locales
     - info_paletteer
     - info_google_fonts
+    - info_flags
     - info_icons
 
   - title: Shiny
