Add ability to keep images inserted into word document reflective of original h/w

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -186,6 +186,7 @@ importFrom(dplyr,vars)
 importFrom(htmltools,css)
 importFrom(magrittr,"%>%")
 importFrom(rlang,`%||%`)
+importFrom(rlang,is_installed)
 importFrom(tidyselect,contains)
 importFrom(tidyselect,ends_with)
 importFrom(tidyselect,everything)
@@ -193,6 +194,7 @@ importFrom(tidyselect,matches)
 importFrom(tidyselect,num_range)
 importFrom(tidyselect,one_of)
 importFrom(tidyselect,starts_with)
+importFrom(tools,file_ext)
 importFrom(xml2,`xml_attr<-`)
 importFrom(xml2,`xml_text<-`)
 importFrom(xml2,as_xml_document)
