--- a/NAMESPACE
+++ b/NAMESPACE
@@ -184,6 +184,10 @@ export(web_image)
 import(rlang)
 importFrom(dplyr,vars)
 importFrom(htmltools,css)
+importFrom(magick,image_info)
+importFrom(magick,image_read)
+importFrom(magick,image_read_pdf)
+importFrom(magick,image_read_svg)
 importFrom(magrittr,"%>%")
 importFrom(rlang,`%||%`)
 importFrom(rlang,is_installed)
@@ -195,6 +199,7 @@ importFrom(tidyselect,num_range)
 importFrom(tidyselect,one_of)
 importFrom(tidyselect,starts_with)
 importFrom(tools,file_ext)
+importFrom(utils,download.file)
 importFrom(xml2,`xml_attr<-`)
 importFrom(xml2,`xml_text<-`)
 importFrom(xml2,as_xml_document)
