--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -129,11 +129,11 @@ Collate:
     'text_transform.R'
     'utils.R'
     'utils_color_contrast.R'
+    'utils_environments.R'
     'utils_examples.R'
     'utils_formatters.R'
     'utils_general_str_formatting.R'
     'utils_pipe.R'
-    'utils_quarto.R'
     'utils_render_common.R'
     'utils_render_html.R'
     'utils_render_latex.R'
