--- a/NAMESPACE
+++ b/NAMESPACE
@@ -111,6 +111,7 @@ export(info_time_style)
 export(local_image)
 export(matches)
 export(md)
+export(nanoplot_options)
 export(num_range)
 export(one_of)
 export(opt_align_table_header)
