--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -127,6 +127,7 @@ reference:
     - cols_label_with
     - cols_units
     - cols_add
+    - cols_nanoplot
     - cols_move
     - cols_move_to_start
     - cols_move_to_end
@@ -181,6 +182,7 @@ reference:
     - pct
     - from_column
     - currency
+    - nanoplot_options
     - adjust_luminance
     - define_units
     - stub
