--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(define_units)
 export(ends_with)
 export(escape_latex)
 export(everything)
+export(extract_body)
 export(extract_cells)
 export(extract_summary)
 export(fmt)
