--- a/.github/workflows/connect-deploy.yaml
+++ b/.github/workflows/connect-deploy.yaml
@@ -49,7 +49,7 @@ jobs:
       - name: Install package
         run: R CMD INSTALL .
 
-      - name: Generate Quarto files for website
+      - name: Generate Quarto files for the website
         run: |
           Rscript -e 'gt:::write_gt_examples_qmd_files()'
 
