--- a/.github/workflows/connect-deploy.yaml
+++ b/.github/workflows/connect-deploy.yaml
@@ -49,7 +49,7 @@ jobs:
       - name: Install package
         run: R CMD INSTALL .
 
-      - name: Generate Quarto files for the website
+      - name: Generate Quarto files for website
         run: |
           Rscript -e 'gt:::write_gt_examples_qmd_files()'
 
@@ -57,16 +57,11 @@ jobs:
         run: |
           quarto render gt_qmd_examples
 
-      - name: Create manifest.json
-        shell: Rscript {0}
-        run: |
-          rsconnect::writeManifest()
-
-      - name: Publish Connect content
-        uses: rstudio/actions/connect-publish@main
+      - name: Publish to Connect
+        uses: quarto-dev/quarto-actions/publish@v2
         with:
-          url: ${{ secrets.CONNECT_SERVER }}
-          api-key: ${{ secrets.CONNECT_API_KEY }}
-          access-type: all
-          show-logs: true
-          dir: ./gt-examples/:/gt_qmd_examples/_site
+          target: connect
+          render: false
+          path: gt_qmd_examples
+          CONNECT_SERVER: ${{ secrets.CONNECT_SERVER }}
+          CONNECT_API_KEY: ${{ secrets.CONNECT_API_KEY }}
